# NeoTCRseek

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example/: example.sh  plot_freq_dotplot.R
paper/: 01convert.sh  02detect_validated_tcr.sh  03detect_expanded_tcr.sh  04predict_cocluster_tcr.sh  05merge_NeoTCRseek.sh  workflow.sh
paper/expected/cluster/CMV-pp65/: co-clustered_TCRs.txt
paper/expected/cluster/Neo-74/: co-clustered_TCRs.txt
paper/expected/detect/: F1_result.summary.tsv
paper/expected/detect/CMV-pp65/100_0.0001_1_-1/: expanded_TCRs.anno.txt  expanded_TCRs.eval.txt  (+2 more)
paper/expected/validate/CMV-pp65/: validated_tcr.1e-3.tsv  validated_tcr.1e-4.tsv  validated_tcr.1e-5.tsv
paper/expected/validate/Neo-74/: validated_tcr.1e-4.tsv
paper/expected/validate/Neo-Mix/: validated_tcr.1e-4.tsv
paper/script/: benchmark.py  cluster_evaluate.py  cluster_evaluate_tcrvalid.py  detect_enriched_tcr.py  detect_validated_tcr.py  f1-score_merge.py  gliph2_result_reformat.py  merge_cluster_predictions.py  merge_expanded_coclustered.py  plot_freq_dotplot_ExpandedTCR.R  plot_venn_tcr.py  tcrvalid_DBSCAN.py  theme_neotcrseek.R
paper/shell/: GIANA_pipeline.sh  GLIPH2_pipeline.sh  TCR-VALID_pipeline.sh  cluster_getdata.sh  detect_CMV-pp65_FC-NC0.sh  detect_CMV-pp65_onlyFC.sh
src/neotcrseek/: __init__.py  cli.py  convert.py  detect.py  pipeline.py
test/: test.sh  test_convert.py  test_detect.py
test/data/: example_case.tsv  example_control.tsv  example_vdjtools.tsv
test/expected/: converted.tsv  expanded_TCRs.stat.txt  expanded_TCRs.txt
(+39 files in other folders)
