[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neotcrseek"
version = "1.0.0"
description = "Neoantigen-specific TCR detection tool"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
neotcrseek = "neotcrseek.cli:main"

